--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+  },
+  "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "sass": "^1.49.7"
-  },
-  "devDependencies": {}
+  }
 }
